[package]
name = "richpresence"
version = "0.1.0"
authors = ["Connor T <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_game_sdk = "1.0"
fsdparser = {git = "https://github.com/Sequal32/vatsimfsdparser.git", features=["sniffer"]}
pnet = {git = "https://github.com/Sequal32/libpnet.git"}
serde_json = "1.0"
systray = "0.4"
text_io = "0.1"